# TFcoro

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
cppcoro/: CMakeLists.txt  README.md
cppcoro/include/cppcoro/: config.hpp  sync_wait.hpp  task.hpp  task_hot.hpp
cppcoro/include/cppcoro/detail/: sync_wait_task.hpp
cppcoro/lib/: file.cpp  socket.cpp  socket_helpers.cpp
include/: sync.h  tfcoro.h
src/: main.cpp  tfcoro_core.cpp
src/testbed/: main.cpp
